# backend/server/routes.js
@@ -5,5 +5,5 @@ import healthRouter from './api/controllers/health/router.js';
 export default function routes(app) {
   app.use('/api/v1/examples', examplesRouter);
   app.use('/api/v1/products', productsRouter);
-  app.use('/api/health', healthRouter);
+  app.use('/api/v1/health', healthRouter);
 }
